--- a/go/import.go.tmpl
+++ b/go/import.go.tmpl
@@ -4,11 +4,11 @@ package main
 
 import (
 	flutter "github.com/go-flutter-desktop/go-flutter"
-	vibrato "github.com/jslater89/vibrato/go"
+	warble "github.com/jslater89/warble/go"
 	path_provider "github.com/go-flutter-desktop/plugins/path_provider"
 )
 
 func init() {
 	// Only the init function can be tweaked by plugin maker.
-	options = append(options, flutter.AddPlugin(vibrato.New()))
+	options = append(options, flutter.AddPlugin(warble.New()))
 }
