--- a/go/import.go.tmpl
+++ b/go/import.go.tmpl
@@ -5,7 +5,7 @@ package main
 import (
 	flutter "github.com/go-flutter-desktop/go-flutter"
 	warble "github.com/jslater89/warble/go"
-	path_provider "github.com/go-flutter-desktop/plugins/path_provider"
+	// path_provider "github.com/go-flutter-desktop/plugins/path_provider"
 )
 
 func init() {
